feat: complete NGO Application Form feature and bug fixes

--- a/01_UI_Architect/fill_a_hole_ui/app.json
+++ b/01_UI_Architect/fill_a_hole_ui/app.json
@@ -13,14 +13,24 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "config": {
+        "googleMapsApiKey": "YOUR_GOOGLE_MAPS_API_KEY_HERE"
+      },
+      "bundleIdentifier": "com.fillahole.app"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "config": {
+        "googleMaps": {
+          "apiKey": "YOUR_GOOGLE_MAPS_API_KEY_HERE"
+        }
+      },
+      "package": "com.fillahole.app"
     },
     "web": {
       "favicon": "./assets/favicon.png"
