--- a/01_UI_Architect/fill_a_hole_ui/package.json
+++ b/01_UI_Architect/fill_a_hole_ui/package.json
@@ -18,6 +18,7 @@
     "expo-firebase-recaptcha": "^2.3.1",
     "expo-image-picker": "~17.0.10",
     "expo-location": "~19.0.8",
+    "expo-sensors": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "firebase": "^12.9.0",
     "lottie-react-native": "^7.3.6",
